<resources>
    <string name="app_name">Ajax Test</string>
    <string name="try_again">Try again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_service_unavailable">Service is unavailable now</string>
    <string name="error_no_connection">No connection</string>
    <string name="user_details">Details</string>
    <string name="text_input_first_name">First name</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="text_input_last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="value_is_empty">Value is empty</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="reload_new">Replace with new</string>
</resources>