<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.userdetails.UserDetailsFragment">

        <ImageView
            android:id="@+id/imageView_userPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:src="@drawable/ic_round_person_48" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_s">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_firstName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/text_input_first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textCapSentences"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="@dimen/margin_s"
                    android:layout_height="0dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_lastName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/text_input_last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textCapSentences"
                        app:errorEnabled="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_s"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences"
                    app:errorEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_s"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_deleteContact"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="@color/red_500"
                    app:rippleColor="@color/red_500" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_saveContact"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
